[tool.poetry]
name = "insurance-concierge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
marshmallow = "^3.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
